Fix desktop footer gap

--- a/app/components/UI/Layout/DesktopFooter/DesktopFooter.module.scss
+++ b/app/components/UI/Layout/DesktopFooter/DesktopFooter.module.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   width: 100%;
   align-items: center;
-  gap: 64px;
+  gap: 24px;
   padding: 64px 32px 32px;
   background: #f1f2f2;
   border-top: 1px solid #b3b2b6;
